// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project detail with a homepage renders correctly 1`] = `
<div>
  <div>
    <h2>
      <a
        href="https://test-url.com"
        title="Project homepage"
      >
        project name
      </a>
    </h2>
    <p>
      Description here
    </p>
    <p>
      <i>
        <b>
          Language
        </b>
        : 
        React JS
      </i>
    </p>
  </div>
</div>
`;

exports[`Project detail without a homepage renders correctly 1`] = `
<div>
  <div>
    <h2>
      project name
    </h2>
    <p>
      Description here
    </p>
    <p>
      <i>
        <b>
          Language
        </b>
        : 
        React JS
      </i>
    </p>
  </div>
</div>
`;
